# qiyicc.nvr

./: CMakeLists.txt  README.md  build.sh  config.xml  nvr.WK3
3part/: nvr.thrift
3part/flask/: app.py  uwsgi.ini
3part/nginx/: nginx.conf
doc/: nvr server interface.doc
include/: config.h  file_monitor.h  jmutex.h  markup.h  public_common.h  server_manager.h  thrift_handler.h  thrift_server.h  web_client.h
src/: Makefile.am  file_monitor.cpp  main.cpp  server_manager.cpp  thrift_handler.cpp  thrift_server.cpp
src/.deps/: jmutex.Po  main.Po  server_manager.Po  web_client.Po
thrift/gen-cpp/: nvrWebService.cpp  nvrWebService.h  nvrWebService_async_server.skeleton.cpp  nvrWebService_server.skeleton.cpp  nvr_constants.cpp  nvr_constants.h  nvr_types.cpp  nvr_types.h
thrift/gen-py/nvr/: __init__.py  nvrWebService-remote  nvrWebService.py
thrift/src/: jmutex.cpp  main.cpp  markup.cpp  server_manager.cpp  thrift_server.cpp  web_client.cpp
